[package]
name = "beat_saber_map"
version = "0.2.1"
authors = ["Valentine Briese <valentinegb@icloud.com>"]
edition = "2021"
description = "Read and write Beat Saber maps with Rust."
repository = "https://github.com/valentinegb/beat-saber-map-rs"
license = "MIT"
keywords = ["beat-saber", "beat-saber-mapping"]
categories = ["data-structures", "games"]

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
thiserror = "1.0.63"
